# Dung

./: .gitignore  CHANGELOG  CHANGELOG.md  Dung.cabal  LICENSE  README.md  README.txt  dungex.txt  exampleaf.txt
.github/workflows/: ci.yml
Language/Dung/: AF.hs  Examples.hs
app/: Main.hs
src/: Main.hs
src/Language/: Dung.hs
src/Language/Dung/: AF.hs  Examples.hs  Input.hs  Output.hs
test/: Doctest.hs  Main.hs
test/Test/Language/Dung/: AF.hs  Input.hs  Properties.hs
