cabal-version: 3.0
name:          Dung
version:       2.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
author:        Bas van Gijzel
maintainer:    Bas van Gijzel <nenekotan+git@gmail.com>
copyright:     Copyright (C) 2014-2026 Bas van Gijzel
stability:     experimental
category:      Argumentation, Embedded, AI
homepage:      https://github.com/nebasuke/Dung
synopsis:      An implementation of the Dung argumentation frameworks.
description:
  An implementation of Dung's argumentation frameworks, an abstract
  argumentation model used to either directly represent conflicting
  information, or used as a translation target for more complex (structured)
  argumentation models. For an introduction to Dung's frameworks see
  <http://en.wikipedia.org/wiki/Argumentation_framework> and Dung's paper
  from 1995: \"On the acceptability of arguments and its fundamental role
  in nonmonotonic reasoning, logic programming, and n-person games\",
  Artificial Intelligence 77: 321-357.
  For the papers accompanying this library see \"Towards a framework for
  the implementation and verification of translations between argumentation
  models\" and \"A principled approach to the implementation of argumentation
  models\", available at <https://scholar.google.com/citations?user=Xu4yjvwAAAAJ&hl>.

build-type:    Simple
tested-with:   GHC == 9.4.8, GHC == 9.6.6, GHC == 9.8.4, GHC == 9.10.1

extra-doc-files:
  README.md
  CHANGELOG.md

extra-source-files:
  LICENSE
  exampleaf.txt
  dungex.txt

source-repository head
  type:     git
  location: https://github.com/nebasuke/Dung

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
  default-language: Haskell2010

library
  import:           warnings
  hs-source-dirs:   src
  build-depends:
    base       >= 4.16 && < 5,
    containers >= 0.6  && < 0.8,
    parsec     >= 3.1  && < 3.2
  exposed-modules:
    Language.Dung
    Language.Dung.AF
    Language.Dung.Examples
    Language.Dung.Input
    Language.Dung.Output

executable dungell
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base                 >= 4.16 && < 5,
    Dung,
    optparse-applicative >= 0.17 && < 0.19
  ghc-options:      -threaded

test-suite dung-tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base              >= 4.16 && < 5,
    Dung,
    containers        >= 0.6  && < 0.8,
    tasty             >= 1.4  && < 1.6,
    tasty-hunit       >= 0.10 && < 0.11,
    tasty-quickcheck  >= 0.10 && < 0.11,
    QuickCheck        >= 2.14 && < 2.16
  other-modules:
    Test.Language.Dung.AF
    Test.Language.Dung.Input
    Test.Language.Dung.Properties

test-suite dung-doctest
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Doctest.hs
  hs-source-dirs:   test
  build-depends:
    base    >= 4.16 && < 5,
    doctest >= 0.20 && < 0.23
